se agrego carrusel

--- a/src/app/menu/desarrollador/desarrollador.page.html
+++ b/src/app/menu/desarrollador/desarrollador.page.html
@@ -6,12 +6,37 @@
       <ion-buttons slot="start">
       </ion-buttons>
     </ion-item>
-   
   </ion-toolbar>  
 </ion-header>
-<ion-content >
+<ion-content class="ion-text-center">
   <ion-card color="none">
-   
+    <div class="image">
+      <img src="../assets/img/persona.png" alt="">
+      <h4>Alejandro Pacheco Guadarrama</h4>
+      <ion-icon name="logo-facebook"></ion-icon>
+      Xlejxndro Xle
+      <ion-icon name="logo-instagram"></ion-icon>
+      @xle404
+    </div>
   </ion-card>
-
+  <ion-card color="none">
+    <div class="image">
+      <img src="../assets/img/persona.png" alt="">
+      <h4>Jesus Rodriguez Salazar</h4>
+      <ion-icon name="logo-facebook"></ion-icon>
+      Jesus Rodriguez Salazar
+      <ion-icon name="logo-instagram"></ion-icon>
+      @untallgsus
+    </div>
+  </ion-card>
+  <ion-card color="none">
+    <div class="image">
+      <img src="../assets/img/persona.png" alt="">
+      <h4>Carlos J. Colorado Zurita</h4>
+      <ion-icon name="logo-facebook"></ion-icon>
+      Javier Zurita
+      <ion-icon name="logo-instagram"></ion-icon>
+      @solojavat
+    </div>
+  </ion-card>
 </ion-content>
