--- a/src/app/menu/usuario/usuario.page.html
+++ b/src/app/menu/usuario/usuario.page.html
@@ -43,7 +43,7 @@
 
   <p><b>Nombre: Alejandro Pacheco Guadarrama</b></p>
   <p><b>Placas: 5W4YY</b></p>
-  <p><b>Automovil: Motocicleta</b></p>
+  <p><b>Vehículo: Motocicleta</b></p>
    <p>Marca: Vento</p>
   <p> Matricula: 201927602</p>
   <p>Correo Electronico: ing.alejandro99@gmail.com</p>
