--- a/src/app/menu/desarrollador/desarrollador.page.scss
+++ b/src/app/menu/desarrollador/desarrollador.page.scss
@@ -2,3 +2,9 @@ ion-content{
     --ion-background-color: rgb(255,255,255);
     --ion-background-color: linear-gradient(325deg, rgba(205,249,225,1) 0%, rgba(114,180,114,1) 100%);
     }
+
+    .image{
+          img{
+              height: 150px;
+          }   
+        }
