--- a/src/app/menu/usuario/usuario.page.html
+++ b/src/app/menu/usuario/usuario.page.html
@@ -18,7 +18,7 @@
     <ion-slides pager="true">
       <ion-slide>
         <div class="codigo">
-          <img src="../assets/img/qr.png" alt="">
+          <img src="../assets/img/noqr.jpg" alt="">
         </div>
       </ion-slide>
       <ion-slide>
@@ -36,25 +36,24 @@
           <img src="../assets/img/placa.png" alt="">
         </div>
       </ion-slide>
+      <ion-slide>
+        <div class="codigo">
+          <img src="../assets/img/siqr.jpeg" alt="">
+        </div>
+      </ion-slide>
     </ion-slides>
   </ion-card>
 
 
 
-  <p><b>Nombre: Alejandro Pacheco Guadarrama</b></p>
-  <p><b>Placas: 5W4YY</b></p>
-  <p><b>Vehículo: Motocicleta</b></p>
+  <p><b>Nombre: Jesus Rodriguez Salazar</b></p>
+  <p><b>Placas: PCC5958</b></p>
+  <p><b>Vehículo: Automovil</b></p>
    <p>Marca: Vento</p>
-  <p> Matricula: 201927602</p>
-  <p>Correo Electronico: ing.alejandro99@gmail.com</p>
-  <p>N° Tarjeta de circulación: <b>YTR0F01010202</b></p>
+  <p> Matricula: 201927106</p>
+  <p>Correo Electronico: jesussalazar1564@icloud.com</p>
+ 
 
-<ion-card *ngIf="caracteres">
-  <label *ng="let caracter of caracteres">
-    {{caracter.Nombre}}
-  </label>
-</ion-card>
-  
 
 
 </ion-content>
